--- a/blog/.vuepress/.temp/sass-palette/hope-palette.scss
+++ b/blog/.vuepress/.temp/sass-palette/hope-palette.scss
@@ -1,3 +1,3 @@
-@import "file:///D:/LEARN/MY-Project/MYXZ-Blog/node_modules/vuepress-theme-hope/templates/palette/palette.scss";
-@import "file:///D:/LEARN/MY-Project/MYXZ-Blog/blog/.vuepress/styles/palette.scss";
-@import "file:///D:/LEARN/MY-Project/MYXZ-Blog/node_modules/vuepress-theme-hope/templates/palette/generator.scss";
+@import "file:///D:/MYXZ-Blog/node_modules/vuepress-theme-hope/templates/palette/palette.scss";
+@import "file:///D:/MYXZ-Blog/blog/.vuepress/styles/palette.scss";
+@import "file:///D:/MYXZ-Blog/node_modules/vuepress-theme-hope/templates/palette/generator.scss";
