feat(blog): 新增简历技术栈文章并优化博客配置
- 新增15篇简历技术栈相关文章，涵盖JavaWeb、Vue、MySQL等技术点
- 在导航栏和首页添加简历技术栈入口
- 更新博客配置，添加搜索和评论功能
- 修复开发环境路径问题
- 更新说明文档记录项目变更

--- a/blog/.vuepress/.temp/sass-palette/hope-config.scss
+++ b/blog/.vuepress/.temp/sass-palette/hope-config.scss
@@ -1,2 +1,2 @@
-@import "file:///D:/MYXZ-Blog/node_modules/vuepress-theme-hope/templates/palette/config.scss";
-@import "file:///D:/MYXZ-Blog/blog/.vuepress/styles/config.scss";
+@import "file:///D:/HOME/桌面/jianl/MYXZ-Blog/node_modules/vuepress-theme-hope/templates/palette/config.scss";
+@import "file:///D:/HOME/桌面/jianl/MYXZ-Blog/blog/.vuepress/styles/config.scss";
