--- a/blog/.vuepress/.temp/sass-palette/hope-style.scss
+++ b/blog/.vuepress/.temp/sass-palette/hope-style.scss
@@ -1,1 +1,1 @@
-@forward "file:///D:/MYXZ-Blog/blog/.vuepress/styles/index.scss";
+@forward "file:///D:/HOME/桌面/jianl/MYXZ-Blog/blog/.vuepress/styles/index.scss";
